# murmur

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  HANDOFF_NEXT_SESSION.md  README.md  devbox.json  pyproject.toml
.claude/: settings.json
config/: calendar.yaml  news_topics.yaml  slack.yaml
config/graphs/: full-v2a.yaml  full-v2b.yaml  full-v2c.yaml  full.yaml  no-tts-v2b.yaml  no-tts.yaml
config/profiles/: default.yaml  work.yaml
docs/: HANDOFF_NEXT_SESSION.md  plugin-development.md  slack-setup.md
docs/plans/: 2024-12-27-murmur-v1-design.md  2024-12-27-murmur-v1-implementation.md  2024-12-28-murmur-v2-design.md  2024-12-29-v2b-slack-integration.md  2024-12-29-v2c-plugin-architecture.md  2024-12-30-calendar-plugin-design.md  2024-12-30-calendar-plugin-implementation.md
prompts/: calendar_gather.md  dedupe.md  gather.md  generate.md  plan.md  plan_v2.md  slack_gather.md
prompts/sources/: calendar.md  news.md  slack.md
scripts/: run_full_pipeline.py
src/murmur/: claude.py  cli.py  core.py  executor.py  graph.py  history.py  registry.py
src/murmur/config/: __init__.py  calendar.py  slack.py
src/murmur/lib/: piper.py
src/murmur/transformers/: __init__.py  brief_planner.py  (+8 more)
tests/: test_calendar_fetcher.py  test_claude.py  test_planner_with_slack.py  test_slack_fetcher.py
tests/integration/: __init__.py  test_calendar_integration.py  test_v2b_pipeline.py
tests/murmur/: test_claude.py  test_cli.py  test_core.py  test_data_source.py  test_executor.py  test_graph.py  test_history.py  test_integration.py  test_integration_v2a.py  test_registry.py
(+15 files in other folders)
